--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
----
 language: java
-jdk:
-  - oraclejdk8
-
-script:
-  - bash <(curl -s https://codecov.io/bash)
+jdk: oraclejdk8
 
 # configure caching (https://docs.travis-ci.com/user/languages/java/#Caching)
 before_cache:
@@ -16,3 +11,6 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
