Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk: oraclejdk8
 
+script: ./gradlew clean build
+
 # configure caching (https://docs.travis-ci.com/user/languages/java/#Caching)
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
