--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 jdk: oraclejdk8
 
-#script: ./gradlew clean build
+install: ./gradlew clean
+
+script: ./gradlew build
 
 # configure caching (https://docs.travis-ci.com/user/languages/java/#Caching)
 before_cache:
